# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  minishell
Includes/: list.h  minishell.h
Sources/: a.out  cd.c  commands.c  env.c  exit.c  ft.c  ft_2.c  ft_split_whitespaces.c  ft_strsplit.c  list.c  minishell.c  readline.c  shell.c  unstandart.c  unstandart_2.c
minishell.dSYM/Contents/Resources/DWARF/: minishell
